--- a/css/style.css
+++ b/css/style.css
@@ -1039,7 +1039,7 @@ main#main {
   transform: translate3d(100%,0,0);
   z-index: 0;
   opacity: 0;
-  background: #fff;
+  background: #efecec;    /* #fff*/
   -webkit-transition: opacity 0s ease .6s,-webkit-transform .6s ease .6s;
   transition: opacity 0s ease .6s,-webkit-transform .6s ease .6s;
   transition: transform .6s ease .6s,opacity 0s ease .6s;
@@ -1047,7 +1047,7 @@ main#main {
 }
 
 body.fullscreendark #main>section#home {
-  background-image: url('../img/Data2.png');
+  background-image: url('../img/GenAi5.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
